# b2t80s_rust

./: Cargo.toml  Readme.md
src/: lib.rs  main  main.rs  signals.rs
src/z80/: cpu.rs  diss.rs  logic.rs  mod.rs  ops_codes.rs  registers.rs  tests.rs
src/zxspectrum/: mod.rs  screen.rs  tap.rs  ula.rs  zx48k.rs
tests/: tests.in  tests.out  z80_tests.rs
ui/: appwindow.slint
utils/: diff.py
