[package]
name = "b2t80s_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "zx"
path = "src/main.rs"

[dependencies]
slint = "1.4"
rand = "0.8"

[build-dependencies]
slint-build = "1.4"
