[package]
name = "b2t80s_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "image",
    "tokio",
    "debug",
] }

[profile.release]
debug = false
