[package]
name = "b2t80s_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.14.1"
time = "0.3"
tokio = { version = "1", features = ["full"] }
iced = { git = "https://github.com/iced-rs/iced.git", features = [
    "image",
    "tokio",
    "debug",
] }
cpal = "0.15.3"
anyhow = "1"

[profile.release]
debug = false

[profile.dev]
opt-level = 1
